alignment fix

--- a/css/home.css
+++ b/css/home.css
@@ -501,7 +501,7 @@ a, a:hover, a:focus, a:active {
 
 .course-title {
     font-family: "Inter Regular";
-    font-size: 1.75em;
+    font-size: 1.85em;
     padding: 0 0.5em;
     text-align: center;
     margin: 0.5em 0 0.2em 0;
